# mockingbird

./: LICENSE  README.md  pyproject.toml
src/: app.py  main.py  modes.py  ollama_client.py  youtube_transcript.py
